--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-PORT = 8000
-API_URI = "http://localhost:3001/users/"
-
+PORT = 8088
+API_URL = "http://localhost:3000"
+API_DB = 'mongodb://127.0.0.1:27017/we173xx'
+SECRET_KEY = 123456
