--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hoangnm-ndm/web503_nodejs.git"
-  }, 
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -18,11 +18,16 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^7.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "joi": "^17.9.0",
-    "json-server": "^0.17.2",
-    "mongoose": "^7.0.2"
+    "joi": "^17.9.1",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3",
+    "moongose": "^1.0.0",
+    "vite": "^4.2.1",
+    "vite-plugin-node": "^3.0.2"
   }
 }
