--- a/package.json
+++ b/package.json
@@ -26,8 +26,13 @@
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
-    "moongose": "^1.0.0",
+    "mongoose-paginate-v2": "^1.7.1",
     "vite": "^4.2.1",
-    "vite-plugin-node": "^3.0.2"
+    "vite-plugin-node": "^3.0.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "cloudinary": "^1.35.0"
+
+
   }
 }
